// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<Styled(Card)
  className="mx-4"
>
  <CardBlock
    className="p-4"
  >
    <span />
    <AvForm
      data-spec="forgot-password-form-container"
      method="get"
      model={Object {}}
      onInvalidSubmit={[Function]}
      onKeyDown={[Function]}
      onSubmit={[Function]}
      onValidSubmit={[Function]}
      tag={[Function]}
      validationEvent={
        Array [
          "onChange",
          "onInput",
        ]
      }
    >
      <h1>
        Forgot your password?
      </h1>
      <p
        className="text-muted"
      >
        Enter your email address below and we will email you a link to reset your password.
      </p>
      <span />
      <ForgotPasswordForm
        handleInputChange={[Function]}
      />
      <Row
        tag="div"
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Button
            className="px-4"
            color="primary"
            tag="button"
          >
            Request
          </Button>
        </Col>
        <Col
          className="text-right text-muted"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <span
            className="pull-right"
          >
            <Link
              href="/login"
              replace={false}
              to="/login"
            >
              Back to Login
            </Link>
          </span>
        </Col>
      </Row>
    </AvForm>
  </CardBlock>
</Styled(Card)>
`;

exports[`rendering snapshots should render valid snapshot with error message 1`] = `
<Styled(Card)
  className="mx-4"
>
  <CardBlock
    className="p-4"
  >
    <span />
    <AvForm
      data-spec="forgot-password-form-container"
      method="get"
      model={Object {}}
      onInvalidSubmit={[Function]}
      onKeyDown={[Function]}
      onSubmit={[Function]}
      onValidSubmit={[Function]}
      tag={[Function]}
      validationEvent={
        Array [
          "onChange",
          "onInput",
        ]
      }
    >
      <h1>
        Forgot your password?
      </h1>
      <p
        className="text-muted"
      >
        Enter your email address below and we will email you a link to reset your password.
      </p>
      <div
        className="has-danger"
      >
        <p
          className="form-control-feedback"
        >
          An unknown error occurred.
        </p>
      </div>
      <ForgotPasswordForm
        handleInputChange={[Function]}
      />
      <Row
        tag="div"
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Button
            className="px-4"
            color="primary"
            tag="button"
          >
            Request
          </Button>
        </Col>
        <Col
          className="text-right text-muted"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <span
            className="pull-right"
          >
            <Link
              href="/login"
              replace={false}
              to="/login"
            >
              Back to Login
            </Link>
          </span>
        </Col>
      </Row>
    </AvForm>
  </CardBlock>
</Styled(Card)>
`;

exports[`rendering snapshots should render valid snapshot with loading indicator 1`] = `
<Styled(Card)
  className="mx-4"
>
  <CardBlock
    className="p-4"
  >
    <LoadingIndicator
      style={
        Object {
          "height": 50,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 50,
        }
      }
    />
    <AvForm
      data-spec="forgot-password-form-container"
      method="get"
      model={Object {}}
      onInvalidSubmit={[Function]}
      onKeyDown={[Function]}
      onSubmit={[Function]}
      onValidSubmit={[Function]}
      tag={[Function]}
      validationEvent={
        Array [
          "onChange",
          "onInput",
        ]
      }
    >
      <h1>
        Forgot your password?
      </h1>
      <p
        className="text-muted"
      >
        Enter your email address below and we will email you a link to reset your password.
      </p>
      <span />
      <ForgotPasswordForm
        handleInputChange={[Function]}
      />
      <Row
        tag="div"
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Button
            className="px-4"
            color="primary"
            tag="button"
          >
            Request
          </Button>
        </Col>
        <Col
          className="text-right text-muted"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <span
            className="pull-right"
          >
            <Link
              href="/login"
              replace={false}
              to="/login"
            >
              Back to Login
            </Link>
          </span>
        </Col>
      </Row>
    </AvForm>
  </CardBlock>
</Styled(Card)>
`;
